ast/src/snapshots/transmute_ast__parser__tests__err_let_fn_eof_in_params.snap
---
source: ast/src/parser.rs
expression: "Parser::new(Lexer::new(\"let x(\")).parse()"
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Unexpected `eof`, expected one of (2) identifier 451, `)` 452",
                span: 1:7; [6, 6],
                level: Error,
                generated_at: (
                    "ast/src/parser.rs",
                    447,
                ),
            },
        ],
    },
)
