ast/src/snapshots/transmute_ast__parser__tests__err_let_missing_semicolon_after_ident.snap
---
source: ast/src/parser.rs
expression: "Parser :: new(Lexer :: new(\"let forty_two = a\")).parse()"
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Unexpected `eof`, expected one of (15) `;`, `.`, `{`, `(`, `*`, `/`, `-`, `+`, `==`, `!=`, `>`, `>=`, `<`, `<=`, `[`",
                span: 1:18; [17, 17],
                level: Error,
                generated_at: (
                    "ast/src/parser.rs",
                    1935,
                ),
            },
        ],
    },
)
