ast/src/snapshots/transmute_ast__parser__tests__err_let_missing_semicolon_after_number.snap
---
source: ast/src/parser.rs
expression: "Parser::new(Lexer::new(\"let forty_two = 42\")).parse()"
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Unexpected `eof`, expected one of (13) `;`, `.`, `*`, `/`, `-`, `+`, `==`, `!=`, `>`, `>=`, `<`, `<=`, `[`",
                span: 1:19; [18, 18],
                level: Error,
                generated_at: (
                    "ast/src/parser.rs",
                    1796,
                ),
            },
        ],
    },
)
