ast/src/snapshots/transmute_ast__parser__tests__err_struct_instantiation_generic_missing_closing.snap
---
source: ast/src/parser.rs
expression: compilation_unit.into_ast()
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Expected `>` to close `<` at 1:2, got `{`",
                span: 1:11; [10, 11],
                level: Error,
            },
        ],
        inputs: (),
    },
)
