ast/src/snapshots/transmute_ast__parser__tests__err_struct_instantiation_missing_close_curly_no_fields.snap
---
source: ast/src/parser.rs
expression: "Parser::new(Lexer::new(\"S {\")).parse()"
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Unexpected `eof`, expected one of (2) `,` 1555, `}` 1554",
                span: 1:4; [3, 3],
                level: Error,
                generated_at: (
                    "ast/src/parser.rs",
                    1550,
                ),
            },
        ],
    },
)
