ast/src/snapshots/transmute_ast__parser__tests__err_struct_instantiation_missing_open_curly_no_fields.snap
---
source: ast/src/parser.rs
expression: "Parser::new(Lexer::new(\"S }\")).parse()"
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Unexpected `}`, expected one of (15) `;` 1602, `.` 1038, `{` 851, `(` 848, `=` 1096, `*` 1207, `/` 1205, `-` 1201, `+` 1203, `==` 1189, `!=` 1191, `>` 1193, `>=` 1195, `<` 1197, `<=` 1199",
                span: 1:3; [2, 3],
                level: Error,
                generated_at: (
                    "ast/src/parser.rs",
                    1602,
                ),
            },
        ],
    },
)
