ast/src/snapshots/transmute_ast__parser__tests__err_struct_missing_greater_after_type_parameters3.snap
---
source: ast/src/parser.rs
expression: compilation_unit.into_ast()
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Expected `>` to close `<` at 1:10, got `{`",
                span: 1:12; [11, 12],
                level: Error,
            },
        ],
        inputs: (),
    },
)
